fix header background image bug on ios mobile safari

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -235,14 +235,11 @@ input[type=submit]:active { border: 1px solid #cf6d17; }
 /* HEADER */
 
 /* ---------------------------------------- */
-
-/*
-'background-attachment: fixed': image stays in the same place.
-*/
 header {
 	background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.7)), to(rgba(0, 0, 0, 0.7))), url(img/hero-min.jpg);
+	background-image: -webkit-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
+	background-image: -o-linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
 	background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero-min.jpg);
-	background-size: cover;
 	background-position: center;
 	height: 100vh;
 	background-attachment: fixed;
